--- a/globals.css
+++ b/globals.css
@@ -19,43 +19,44 @@ html {
     font-size: 20px;
 }
 
+@keyframes animated-hero {
+	0% {
+        opacity: 0;
+	}
+	100% {
+        opacity: 1;
+	}
+}
+
 @keyframes animated-hero-border {
-    0% {
-        transform: scale(0);
-    }
-    60% {
-        transform: scale(0);
-    }
-    100% {
-        transform: scale(1);
-    }
+	0% {
+		background-position: 0 0;
+	}
+	50% {
+		background-position: 400% 0;
+	}
+	100% {
+		background-position: 0 0;
+	}
 }
 
-@-webkit-keyframes animated-hero-border {
-    0% {
-        -webkit-transform: translate(-100%, -100%);
-    }
-    60% {
-        -webkit-transform: translate(-50%, -50%);
-    }
-    100% {
-        -webkit-transform: translate(0%, 0%);
-    }
-}
-
-.animated-hero-border::after {
-    animation-fill-mode: forwards;
-    animation-name: animated-hero-border;
-    animation-duration: 4s;
-    -webkit-animation-fill-mode: forwards;
-    -webkit-animation-name: animated-hero-border;
-    -webkit-animation-duration: 4s;
-    position: absolute;
-    border-radius: 1.5rem;
+.animated-hero:before, .animated-hero:after {
     content: "";
-    background: linear-gradient(to bottom, #9945FF, #14F195);
-    width: 100%;
-    height: 100%;
+	position: absolute;
+	left: -3px;
+	top: -3px;
+	background: linear-gradient(45deg, #9945FF, #5d93cf, #14F195, #9945FF, #5d93cf, #14F195);
+    border-radius: 1.5rem;
+	background-size: 200%;
+	width: calc(100% + 7px);
+	height: calc(100% + 7px);
+	z-index: -1;
+    opacity: 0;
+	animation: animated-hero-border 20s linear infinite 2s, animated-hero 1s forwards 2s;
+}
+
+.animated-hero:after {
+	filter: blur(50px);
 }
 
 @media only screen and (min-width: 600px) {
